src/components/Button/Button.module.scss
@import '~@palmetto/palmetto-design-tokens/build/scss/variables-size';

@mixin size-xs {
  border-radius: var(--button-size-xs-border-radius);
  padding: var(--button-size-xs-padding-vertical) var(--button-size-xs-padding-horizontal);
  min-height: 20px;
  font-size: var(--button-size-xs-font-size);

  &.outline {
    padding: calc(var(--button-size-xs-padding-vertical) - 1px)
      calc(var(--button-size-xs-padding-horizontal) - 1px);
  }
}

%size-xs { @include size-xs; }
.size-xs { @extend %size-xs; }

@mixin size-sm {
  border-radius: var(--button-size-sm-border-radius);
  padding: var(--button-size-sm-padding-vertical) var(--button-size-sm-padding-horizontal);
  min-height: 32px;
  font-size: var(--button-size-sm-font-size);

  &.outline {
    padding: calc(var(--button-size-sm-padding-vertical) - 1px)
      calc(var(--button-size-sm-padding-horizontal) - 1px);
  }
}

%size-sm { @include size-sm; }
.size-sm { @extend %size-sm; }

@mixin size-md {
  border-radius: var(--button-size-md-border-radius);
  padding: var(--button-size-md-padding-vertical) var(--button-size-md-padding-horizontal);
  min-height: 42px;
  font-size: var(--button-size-md-font-size);

  &.outline {
    padding: calc(var(--button-size-md-padding-vertical) - 1px)
      calc(var(--button-size-md-padding-horizontal) - 1px);
  }
}

%size-md { @include size-md; }
.size-md { @extend %size-md; }

@mixin size-lg {
  border-radius: var(--button-size-lg-border-radius);
  padding: var(--button-size-lg-padding-vertical) var(--button-size-lg-padding-horizontal);
  min-height: 55px;
  letter-spacing: 1px;
  font-size: var(--button-size-lg-font-size);

  &.outline {
    padding: calc(var(--button-size-lg-padding-vertical) - 1px)
      calc(var(--button-size-lg-padding-horizontal) - 1px);
  }
}

%size-lg { @include size-lg; }
.size-lg { @extend %size-lg; }

.button {
  border: 0;
  cursor: pointer;
  background-color: transparent;
  padding: 0;
  color: inherit;
  line-height: 1;

  &:not(.naked) {
    display: inline-block;
    position: relative;
    transition-duration: 0.2s;
    transition-property: background-color, border, box-shadow, color;
    transition-timing-function: cubic-bezier(0.67, 0.83, 0.67);
    text-align: center;
    text-decoration: none;
    letter-spacing: 0.2px;
    font-weight: var(--button-font-weight);
  }

  &:hover {
    text-decoration: none;
  }

  &:disabled {
    opacity: 0.65;
    cursor: not-allowed;
  }

  /* define regular focus styles for non-supporting browsers */
  &:focus {
    outline: 0;
    box-shadow: var(--input-focus-box-shadow);
  }

  /* Show focus styles on keyboard focus. */
  &:focus-visible {
    outline: 0;
    box-shadow: var(--input-focus-box-shadow);
  }

  /* Hide focus styles if they're not needed, for example,
  when an element receives focus via the mouse. */
  &:focus:not(:focus-visible) {
    outline: 0;
    box-shadow: none;
  }

  &.outline {
    border: 1px solid;
  }

  &.primary {
    background-color: var(--button-background-color-primary);
    color: var(--button-font-color-primary);

    &:not(:disabled):hover {
      background-color: var(--button-background-hover-color-primary);
      color: var(--button-font-color-primary);
    }

    &.outline {
      border-color: var(--button-border-hover-color-primary-outline);
      background-color: transparent;
      color: var(--button-font-color-primary-outline);

      &:not(:disabled):hover {
        border-color: var(--button-border-hover-color-primary-outline);
        background-color: var(--button-background-hover-color-primary-outline);
        color: var(--button-font-hover-color-primary-outline);
      }
    }
  }

  &.success {
    background-color: var(--button-background-color-success);
    color: var(--button-font-color-success);

    &:not(:disabled):hover {
      background-color: var(--button-background-hover-color-success);
    }

    &.outline {
      border-color: var(--button-border-hover-color-success-outline);
      background-color: transparent;
      color: var(--button-font-color-success-outline);

      &:not(:disabled):hover {
        border-color: var(--button-border-hover-color-success-outline);
        background-color: var(--button-background-hover-color-success-outline);
        color: var(--button-font-hover-color-success-outline);
      }
    }
  }

  &.danger {
    background-color: var(--button-background-color-danger);
    color: var(--button-font-color-danger);

    &:focus {
      outline: 0;
      box-shadow: var(--button-focus-box-shadow-danger);
    }

    &:focus-visible {
      outline: 0;
      box-shadow: var(--button-focus-box-shadow-danger);
    }

    &:not(:disabled):hover {
      background-color: var(--button-background-hover-color-danger);
    }

    &:focus:not(:focus-visible) {
      outline: 0;
      box-shadow: none;
    }

    &.outline {
      border-color: var(--button-border-hover-color-danger-outline);
      background-color: transparent;
      color: var(--button-font-color-danger-outline);

      &:not(:disabled):hover {
        border-color: var(--button-border-hover-color-danger-outline);
        background-color: var(--button-background-hover-color-danger-outline);
        color: var(--button-font-hover-color-danger-outline);
      }
    }
  }

  &.dark {
    background-color: var(--button-background-color-dark);
    color: var(--button-font-color-dark);

    &:focus {
      outline: 0;
      box-shadow: var(--button-focus-box-shadow-dark);
    }

    &:focus-visible {
      outline: 0;
      box-shadow: var(--button-focus-box-shadow-dark);
    }

    &:not(:disabled):hover {
      background-color: var(--button-background-hover-color-dark);
    }

    &:focus:not(:focus-visible) {
      outline: 0;
      box-shadow: none;
    }

    &.outline {
      border-color: var(--button-border-color-dark-outline);
      background-color: transparent;
      color: var(--button-font-color-dark-outline);

      &:not(:disabled):hover {
        border-color: var(--button-border-hover-color-dark-outline);
        background-color: var(--color-brand-grey-50);
        color: var(--button-font-color-dark-outline);
      }
    }
  }

  &.light {
    background-color: var(--button-background-color-light);
    color: var(--button-font-color-light);

    &:focus {
      outline: 0;
      box-shadow: var(--button-focus-box-shadow-light);
    }

    &:focus-visible {
      outline: 0;
      box-shadow: var(--button-focus-box-shadow-light);
    }

    &:not(:disabled):hover {
      background-color: var(--button-background-hover-color-light);
    }

    &:focus:not(:focus-visible) {
      outline: 0;
      box-shadow: none;
    }

    &.outline {
      border-color: var(--button-border-color-light-outline);
      background-color: transparent;
      color: var(--button-font-color-light-outline);

      &:not(:disabled):hover {
        border-color: var(--button-border-hover-color-light-outline);
        background-color: var(--color-brand-grey-50);
        color: var(--button-font-hover-color-light-outline);
      }
    }
  }

  &.size-xs { @extend %size-xs; }
  &.size-sm { @extend %size-sm; }
  &.size-md { @extend %size-md; }
  &.size-lg { @extend %size-lg; }

  @media (min-width: $size-breakpoint-tablet) {
    &.size-xs-tablet { @include size-xs; }
    &.size-sm-tablet { @include size-sm; }
    &.size-md-tablet { @include size-md; }
    &.size-lg-tablet { @include size-lg; }
  }

  @media (min-width: $size-breakpoint-desktop) {
    &.size-xs-desktop { @include size-xs; }
    &.size-sm-desktop { @include size-sm; }
    &.size-md-desktop { @include size-md; }
    &.size-lg-desktop { @include size-lg; }
  }

  @media (min-width: $size-breakpoint-hd) {
    &.size-xs-hd { @include size-xs; }
    &.size-sm-hd { @include size-sm; }
    &.size-md-hd { @include size-md; }
    &.size-lg-hd { @include size-lg; }
  }

  &.loading {
    .label {
      visibility: hidden;
    }
  }

  &.full-width {
    width: 100%;
  }
}

.spinner-wrapper {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

